Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <ul>
 <li>A SQL Script that adds a pin number field to the users table (USRS_DAT) in Web Bomic.</li>
 <li>A Web API interface that fetches and posts data into Web Bomic.</li>
-<li>A IPad or Android App that allows the collection of the events.</li>
-</ul>
+<li>
+<p>A IPad or Android App that allows the collection of the events.</p>
 
 <h3>
 <a id="installing-the-sql-script" class="anchor" href="#installing-the-sql-script" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the SQL Script</h3>
@@ -52,6 +52,19 @@
 
 <h3>
 <a id="installing-the-app" class="anchor" href="#installing-the-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the App</h3>
+</li>
+</ul>
+
+<h2>
+<a id="using-wb-collect" class="anchor" href="#using-wb-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using WB Collect</h2>
+
+<p>### First Use</p>
+
+<p>### Logging In</p>
+
+<p>### Adding/Editing Events</p>
+
+<p>### Synchronising Events</p>
         </section>
 
         <aside id="sidebar">
