Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2>
-<a id="web-bomic-collect" class="anchor" href="#web-bomic-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Web Bomic Collect</h2>
+          <h1>
+<a id="web-bomic-collect" class="anchor" href="#web-bomic-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Web Bomic Collect</h1>
 
 <p>Allows collection of Web Bomic client events via IPad or Android devices, that can be synchronised to any Web Bomic application.</p>
 
-<h2>
-<a id="installing-web-bomic-collect" class="anchor" href="#installing-web-bomic-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing Web Bomic Collect</h2>
+<h1>
+<a id="installing-web-bomic-collect" class="anchor" href="#installing-web-bomic-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing Web Bomic Collect</h1>
 
 <p>WB Collect is made of 3 parts that need to be installed separately.</p>
 
 <ul>
 <li>A SQL Script that adds a pin number field to the users table (USRS_DAT) in Web Bomic.</li>
 <li>A Web API interface that fetches and posts data into Web Bomic.</li>
-<li>
-<p>A IPad or Android App that allows the collection of the events.</p>
+<li>A IPad or Android App that allows the collection of the events.</li>
+</ul>
 
 <h3>
 <a id="installing-the-sql-script" class="anchor" href="#installing-the-sql-script" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the SQL Script</h3>
@@ -52,19 +52,21 @@
 
 <h3>
 <a id="installing-the-app" class="anchor" href="#installing-the-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the App</h3>
-</li>
-</ul>
 
-<h2>
-<a id="using-wb-collect" class="anchor" href="#using-wb-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using WB Collect</h2>
+<h1>
+<a id="using-wb-collect" class="anchor" href="#using-wb-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using WB Collect</h1>
 
-<p>### First Use</p>
+<h3>
+<a id="first-use" class="anchor" href="#first-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>First Use</h3>
 
-<p>### Logging In</p>
+<h3>
+<a id="logging-in" class="anchor" href="#logging-in" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logging In</h3>
 
-<p>### Adding/Editing Events</p>
+<h3>
+<a id="addingediting-events" class="anchor" href="#addingediting-events" aria-hidden="true"><span class="octicon octicon-link"></span></a>Adding/Editing Events</h3>
 
-<p>### Synchronising Events</p>
+<h3>
+<a id="synchronising-events" class="anchor" href="#synchronising-events" aria-hidden="true"><span class="octicon octicon-link"></span></a>Synchronising Events</h3>
         </section>
 
         <aside id="sidebar">
