Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,8 +47,24 @@
 <h3>
 <a id="installing-the-sql-script" class="anchor" href="#installing-the-sql-script" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the SQL Script</h3>
 
+<p>The SQL script that adds the pin number field to the Web Bomic database is called:-</p>
+
+<ul>
+<li>001 DDL Add Pin Column to Usrs_dat table.sql</li>
+</ul>
+
+<p>Log in to your desired SQL installation using Microsoft SQL server management studio and with sufficient privileges to run the SQL script. Select your desired Web Bomic database. Open the SQL script and then click Execute. </p>
+
 <h3>
 <a id="installing-the-api" class="anchor" href="#installing-the-api" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the API</h3>
+
+<p>The API is distributed in the form of a zip file named:-</p>
+
+<ul>
+<li>WB Collect WEB API.zip</li>
+</ul>
+
+<p>To install the API you need to add an IIS application under the IIS Web Site where your Web Bomic application is already installed.</p>
 
 <h3>
 <a id="installing-the-app" class="anchor" href="#installing-the-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the App</h3>
