Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,11 +78,22 @@
 <h3>
 <a id="installing-the-app" class="anchor" href="#installing-the-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing the App</h3>
 
+<p>The application can be installed by scanning the distributed QR image, using a QR scanner app on an IPad or Android device.</p>
+
+<p>NOTE: The application can currently only be installed on a selected number of IPads' due to the app still being in development and not yet fully distributed.</p>
+
 <h1>
 <a id="using-wb-collect" class="anchor" href="#using-wb-collect" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using WB Collect</h1>
 
 <h3>
 <a id="first-use" class="anchor" href="#first-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>First Use</h3>
+
+<p>The first time the application is used an any device, the following should be performed.</p>
+
+<ol>
+<li>Log in, using a valid Web Bomic username and pin number.</li>
+<li>Click the green sync button. This will populate the lookup lists used in the app, when the app is in offline mode.</li>
+</ol>
 
 <h3>
 <a id="logging-in" class="anchor" href="#logging-in" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logging In</h3>
